--- a/public/css/hermes.css
+++ b/public/css/hermes.css
@@ -55,7 +55,7 @@ html,
     }
 
     .ipl-progress-indicator-head {
-      background-color: #d73925;
+      background-color: #3c8dbc;
       height: 4px;
       overflow: hidden;
       position: relative;
