--- a/src/common/template/custom.css
+++ b/src/common/template/custom.css
@@ -13,3 +13,13 @@ li.header {
 .logo-h, .wing-left, .wing-right {
     fill: white;
 }
+
+.monitoring-text-area{
+    height: 17vh !important ;
+    width: 95%;
+}
+
+.monitoring-row{
+    padding-right: 0px; 
+    padding-left: 0px;
+}
