--- a/src/styles/ui.less
+++ b/src/styles/ui.less
@@ -1,7 +1,7 @@
 .skin-blue-light{
     .sidebar-menu{
         li.active{
-             border-left: 4px solid #3c8dbc;
+             border-left: 4px solid #3784b1;
             i{
                 color: #3c8dbc;
             }
@@ -10,6 +10,12 @@
             a{
                 font-weight: 400 !important;
             }
+        }
+    }
+
+    .main-header {
+        .logo {
+            background-color: #3784b1;
         }
     }
 }      
@@ -35,4 +41,9 @@ li.header {
 
 .logo-h, .wing-left, .wing-right {
     fill: white;
+}
+
+
+.direct-chat-messages{
+    height: 100%;
 }
