--- a/src/public/register.css
+++ b/src/public/register.css
@@ -14,7 +14,7 @@ padding:0px;
 .left-side{
     height: 100vh;
 	padding:0px 0px 100px;
-	background:#9100ff !important;
+	background:#3784b1 !important;
 	background-size:cover;
 }
 .left-side h1{
@@ -34,7 +34,6 @@ padding:0px;
 	.fb{background: #2d6bb7;
     color: #FFF;
     padding: 10px 15px;
-    border-radius: 18px;
     font-size: 12px;
     font-weight: 600;
     margin-right: 15px;
@@ -44,7 +43,6 @@ box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);}
 	.tw{background: #20c1ed;
     color: #FFF;
     padding: 10px 15px;
-    border-radius: 18px;
     font-size: 12px;
     font-weight: 600;
     margin-right: 15px;-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
@@ -72,13 +70,12 @@ box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);}
 	.form{padding:10px 50px 10px 50px;}
     .form-control{box-shadow: none !important;
     border-radius: 0px !important;
-    border-bottom: 1px solid #9100ff !important;
+    border-bottom: 1px solid #3784b1 !important;
     border-top: none !important;
     border-left: none !important;
     border-right: none !important;}
 	.btn-deep-purple {
     background: #84d14e;
-    border-radius: 18px;
     padding: 5px 19px;
     color: #FFF;
     font-weight: 600;
