--- a/src/public/register.css
+++ b/src/public/register.css
@@ -3,7 +3,7 @@
     overflow: hidden !important;
     
 }
-.main{margin-top:70px;
+.main{
 -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
 -moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
 box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
