--- a/src/public/register.css
+++ b/src/public/register.css
@@ -1,86 +1,139 @@
-#playground-container {
-    height: 100vh;
-    overflow: hidden !important;
-    
-}
+
 .main{
--webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
--moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
-padding:0px;
+    -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
+    -moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
+    box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
+    padding:0px;
+    margin: 8%; 
+    height: 400px;
 }
-.fb:focus, .fb:hover{color:FFF !important;}
-
-.left-side{
-    height: 100vh;
-	padding:0px 0px 100px;
-	background:#3784b1 !important;
-	background-size:cover;
-}
-.left-side h1{
-	font-size: 70px;
-    font-weight: 900;
-	color:#FFF;
-	padding: 50px 10px 00px 26px;
-	}
-	
-	.left-side p{
-    font-weight:600;
-	color:#FFF;
-	padding:10px 10px 10px 26px;
-	}
-
-	
-	.fb{background: #2d6bb7;
-    color: #FFF;
-    padding: 10px 15px;
-    font-size: 12px;
-    font-weight: 600;
-    margin-right: 15px;
-	margin-left:26px;-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
--moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);}
-	.tw{background: #20c1ed;
-    color: #FFF;
-    padding: 10px 15px;
-    font-size: 12px;
-    font-weight: 600;
-    margin-right: 15px;-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
--moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);}
-	
-	.right-side{
-    padding:30px 0px 100px;
-    height: 100vh;
-	background:#FFF;
-	background-size:cover;
-	min-height:514px;
-}
-	.right-side h1{
-	font-size: 30px;
-    font-weight: 700;
-	color:#000;
-	padding: 50px 10px 00px 50px;
-	}
-	.right-side p{
-    font-weight:600;
-	color:#000;
-	padding:10px 50px 10px 50px;
-	}
-	.form{padding:10px 50px 10px 50px;}
-    .form-control{box-shadow: none !important;
+	    
+.form-control{box-shadow: none !important;
     border-radius: 0px !important;
-    border-bottom: 1px solid #3784b1 !important;
+    border-bottom: 1px solid #004e92 !important;
     border-top: none !important;
     border-left: none !important;
-    border-right: none !important;}
-	.btn-deep-purple {
-    background: #84d14e;
-    padding: 5px 19px;
-    color: #FFF;
-    font-weight: 600;
-    float: right;
-	-webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
--moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.24);
+    border-right: none !important;
+}
+
+.container-fluid{
+    height: 100vh;
+    background: white url("../styles/img/public_bg.png") repeat fixed center;
+}
+
+.left-side,
+.right-side {
+    padding: 20px;
+    height: 400px;
+    color: white;
+}
+
+.left-side {
+    background: #004e92; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#004e92, #000428); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#004e92, #000428); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#004e92, #000428); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#004e92, #000428); /* Standard syntax */
+
+}
+
+.left-side .btn:last-child {
+    color: white;
+    margin-left: 20px;
+}
+
+.right-side{
+    color: #004e92;
+    background-color: white;
+    overflow-y: scroll;
+}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+/* Styles */
+    .main {
+        margin: 0px; 
+    }
+    .container-fluid{
+        padding: 0px;
+    }
+     .right-side{
+        height: auto;
+        padding: 20px;
+        overflow-y: unset;
+    }
+}
+
+/* Smartphones (landscape) ----------- */
+@media only screen 
+and (min-width : 321px) {
+/* Styles */
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen 
+and (max-width : 320px) {
+/* Styles */
+
+}
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) {
+
+ .main {
+   margin: 40% 10%; 
+ }
+
+}
+
+/* iPads (landscape) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape) {
+
+.main {
+    margin: 15% 10%; 
+ }
+
+}
+
+/* iPads (portrait) ----------- */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait) {
+
+}
+
+/* Desktops and laptops ----------- */
+@media only screen 
+and (min-width : 1224px) {
+    .right-side, .left-side{
+ 
+    }
+}
+
+/* Large screens ----------- */
+@media only screen 
+and (min-width : 1824px) {
+/* Styles */
+    .right-side, .left-side{
+        height: 650px;
+    }
+}
+
+/* iPhone 4 ----------- */
+@media
+only screen and (-webkit-min-device-pixel-ratio : 1.5),
+only screen and (min-device-pixel-ratio : 1.5) {
+/* Styles */
+    .right-side{
+        overflow-y: unset;
+        height: auto;
+    }
 }
