Refactoring style button in rigth-side public page

--- a/src/public/register.css
+++ b/src/public/register.css
@@ -47,6 +47,9 @@
     background-color: white;
     overflow-y: scroll;
 }
+  .right-side .form button {
+    float:right;
+  }
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen 
