Added backgroun-color in div main

--- a/src/public/register.css
+++ b/src/public/register.css
@@ -6,6 +6,7 @@
     padding:0px;
     margin: 2%; 
     height: 550px;
+    background-color: white;
 }
 	    
 .form-control{box-shadow: none !important;
