--- a/src/styles/ui.css
+++ b/src/styles/ui.css
@@ -10,9 +10,62 @@
 .skin-blue-light .main-header .logo {
   background-color: #3784b1;
 }
+.form-group {
+  /* Hide default HTML checkbox */
+  /* The slider */
+  /* Rounded sliders */
+}
 .form-group textarea {
   height: 8em;
   max-width: 100%;
+}
+.form-group .switch {
+  position: relative;
+  display: block;
+  width: 60px;
+  height: 34px;
+}
+.form-group .switch input {
+  display: none;
+}
+.form-group .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+.form-group .slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+.form-group input:checked + .slider {
+  background-color: #2196F3;
+}
+.form-group input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+.form-group input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+.form-group .slider.round {
+  border-radius: 34px;
+}
+.form-group .slider.round:before {
+  border-radius: 50%;
 }
 button {
   margin-left: 5px;
